# ProteiITSchool2025-Network

./: CMakeLists.txt  calculator.cpp  calculator.h  client.cpp  server.cpp
